--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
   "comment": "See linux/input-event-codes.h for key names (e.g. KEY_CAPSLOCK). keys »shell_command« and »virtual_keys« are mutually exclusive. Sequence matters. Setting »exclusive« to true will cause subsequent chords to be skipped (but all preceding chords will trigger).",
-  "version": "1.3.220306_2345.93496a0",
+  "version_major": 1,
+  "version_increment": 12,
+  "version": "1.12.220308_1103.4f0dd9a",
   "shell_command_wrapper": {
     "comment": "adds prefix and suffix to each command (concats the three strings).",
     "prefix": "su -P -c \\\"export DISPLAY=:0;",
@@ -123,6 +125,14 @@
         "KEY_A"
       ],
       "terminal_key": "KEY_L",
+      "exclusive": false
+    },
+    {
+      "shell_command": "xdotool key 'BackSpace'; xdotool type '_'",
+      "mod_keys": [
+        "KEY_CAPSLOCK"
+      ],
+      "terminal_key": "KEY_SPACE",
       "exclusive": false
     },
     {
