--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "comment": "See linux/input-event-codes.h for key names (e.g. KEY_CAPSLOCK). keys »shell_command« and »virtual_keys« are mutually exclusive. Sequence matters. Setting »exclusive« to true will cause subsequent chords to be skipped (but all preceding chords will trigger).",
   "version_major": 1,
-  "version_increment": 111,
-  "version": "1.111.230615_0129.c60bd87",
+  "version_increment": 119,
+  "version": "1.119.230902_1649.c775a31",
   "shell_command_wrapper": {
     "comment": "adds prefix and suffix to each command (concats the three strings).",
     "prefix": "su -c \\\"export DISPLAY=:0;",
@@ -25,6 +25,23 @@
       "terminal_key": "KEY_G",
       "exclusive": true
     },
+    {
+      "shell_command": "/home/mio/.config/i3/scripts/i3-scripts/unicode_inserter.rb",
+      "mod_keys": [
+        "KEY_CAPSLOCK"
+      ],
+      "terminal_key": "KEY_P"
+    },
+
+
+    {
+      "mod_keys":     [ "KEY_CAPSLOCK" ], 
+      "terminal_key": "KEY_TAB",
+      "virtual_keys": [ "KEY_LEFTMETA", "KEY_J" ], 
+      "exclusive": true
+    },
+
+
     {
       "virtual_keys": [
         "KEY_LEFTCTRL",
